--- a/web/jreports/reports/WebappReport_backup.jrxml
+++ b/web/jreports/reports/WebappReport_backup.jrxml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
+
 
 <jasperReport
         xmlns="http://jasperreports.sourceforge.net/jasperreports"
@@ -14,37 +15,32 @@
     <style name="Sans_Italic" isDefault="false" fontName="DejaVu Sans" fontSize="12" isBold="false" isItalic="true"
            isUnderline="false" isStrikeThrough="false"/>
     <style name="pageHeader" isDefault="false" style="Sans_Bold" forecolor="#ffffff" backcolor="#333333"/>
-
     <parameter name="ReportTitle" class="java.lang.String"/>
 
     <parameter name="BaseDir" class="java.io.File"/>
 
-    <field name="Id" class="java.lang.Long"/>
+    <field name="Id" class="java.lang.Integer"/>
 
     <field name="Name" class="java.lang.String"/>
 
-    <field name="Price" class="java.lang.Double"/>
+    <field name="Street" class="java.lang.String"/>
 
-    <field name="Count" class="java.lang.Integer"/>
+    <field name="City" class="java.lang.String"/>
 
-    <field name="AuthorId" class="java.lang.Long"/>
-
-    <field name="AuthorName" class="java.lang.String"/>
-
-    <variable name="AuthorNumber" class="java.lang.Integer" resetType="Group" resetGroup="AuthorGroup" calculation="System">
+    <variable name="CityNumber" class="java.lang.Integer" resetType="Group" resetGroup="CityGroup" calculation="System">
         <initialValueExpression>
             <![CDATA[
-                ($V{AuthorNumber} != null)
-                    ? (Integer.valueOf($V{AuthorNumber}.intValue() + 1))
+                ($V{CityNumber} != null)
+                    ? (Integer.valueOf($V{CityNumber}.intValue() + 1))
                     : (Integer.valueOf(1))
             ]]>
         </initialValueExpression>
     </variable>
 
-    <variable name="AllAuthors" class="java.lang.String" calculation="System"/>
+    <variable name="AllCities" class="java.lang.String" calculation="System"/>
 
-    <group name="AuthorGroup" minHeightToStartNewPage="60">
-        <groupExpression><![CDATA[$F{AuthorId}]]></groupExpression>
+    <group name="CityGroup" minHeightToStartNewPage="60">
+        <groupExpression><![CDATA[$F{City}]]></groupExpression>
         <groupHeader>
             <band height="20">
                 <textField>
@@ -55,7 +51,7 @@
                     </box>
                     <textElement/>
                     <textFieldExpression class="java.lang.String">
-                        <![CDATA["  " + String.valueOf($V{AuthorNumber}) + ". " + String.valueOf($F{AuthorName})]]></textFieldExpression>
+                        <![CDATA["  " + String.valueOf($V{CityNumber}) + ". " + String.valueOf($F{City})]]></textFieldExpression>
                 </textField>
             </band>
         </groupHeader>
@@ -73,27 +69,41 @@
                 <textField>
                     <reportElement x="460" y="0" width="30" height="15" style="Sans_Bold"/>
                     <textElement textAlignment="Right"/>
-                    <textFieldExpression class="java.lang.Integer"><![CDATA[$V{AuthorGroup_COUNT}]]></textFieldExpression>
+                    <textFieldExpression class="java.lang.Integer"><![CDATA[$V{CityGroup_COUNT}]]></textFieldExpression>
                 </textField>
             </band>
         </groupFooter>
     </group>
     <title>
         <band height="60">
-            <textField isBlankWhenNull="true">
-                <reportElement x="175" y="5" width="335" height="40"/>
-                <textElement textAlignment="Right">
-                    <font size="22"/>
-                </textElement>
-                <textFieldExpression class="java.lang.String"><![CDATA[$P{ReportTitle}]]></textFieldExpression>
-            </textField>
+            <frame>
+                <reportElement x="0" y="0" width="515" height="50" backcolor="#E0E0E0"/>
+                <box>
+                    <topPen lineWidth="1"/>
+                </box>
+                <image scaleImage="Clip" hyperlinkType="Reference">
+                    <reportElement x="5" y="5" width="165" height="40"/>
+                    <graphicElement/>
+                    <imageExpression class="java.io.File">
+                        <![CDATA[new File($P{BaseDir}, "../images/jasperreports.png")]]></imageExpression>
+                    <hyperlinkReferenceExpression>
+                        <![CDATA["http://jasperreports.sourceforge.net"]]></hyperlinkReferenceExpression>
+                </image>
+                <textField isBlankWhenNull="true">
+                    <reportElement x="175" y="5" width="335" height="40"/>
+                    <textElement textAlignment="Right">
+                        <font size="22"/>
+                    </textElement>
+                    <textFieldExpression class="java.lang.String"><![CDATA[$P{ReportTitle}]]></textFieldExpression>
+                </textField>
+            </frame>
         </band>
     </title>
     <pageHeader>
         <band height="20">
             <staticText>
                 <reportElement mode="Opaque" x="0" y="5" width="55" height="15" style="pageHeader"/>
-                <textElement/>
+                <textElement textAlignment="Center"/>
                 <text><![CDATA[ID]]></text>
             </staticText>
             <staticText>
@@ -102,38 +112,28 @@
                 <text><![CDATA[Name]]></text>
             </staticText>
             <staticText>
-                <reportElement mode="Opaque" x="260" y="5" width="65" height="15" style="pageHeader"/>
+                <reportElement mode="Opaque" x="260" y="5" width="255" height="15" style="pageHeader"/>
                 <textElement/>
-                <text><![CDATA[Price]]></text>
-            </staticText>
-            <staticText>
-                <reportElement mode="Opaque" x="325" y="5" width="55" height="15" style="pageHeader"/>
-                <textElement/>
-                <text><![CDATA[Count]]></text>
+                <text><![CDATA[Street]]></text>
             </staticText>
         </band>
     </pageHeader>
     <detail>
         <band height="20">
             <textField>
-                <reportElement x="0" y="4" width="55" height="15"/>
-                <textElement/>
-                <textFieldExpression class="java.lang.Long"><![CDATA[$F{Id}]]></textFieldExpression>
+                <reportElement x="0" y="4" width="50" height="15"/>
+                <textElement textAlignment="Right"/>
+                <textFieldExpression class="java.lang.Integer"><![CDATA[$F{Id}]]></textFieldExpression>
             </textField>
             <textField isStretchWithOverflow="true">
-                <reportElement positionType="Float" x="55" y="4" width="205" height="15"/>
+                <reportElement positionType="Float" x="55" y="4" width="200" height="15"/>
                 <textElement/>
                 <textFieldExpression class="java.lang.String"><![CDATA[$F{Name}]]></textFieldExpression>
             </textField>
             <textField isStretchWithOverflow="true">
-                <reportElement positionType="Float" x="260" y="4" width="65" height="15"/>
+                <reportElement positionType="Float" x="260" y="4" width="255" height="15"/>
                 <textElement/>
-                <textFieldExpression class="java.lang.Double"><![CDATA[$F{Price}]]></textFieldExpression>
-            </textField>
-            <textField isStretchWithOverflow="true">
-                <reportElement positionType="Float" x="325" y="4" width="55" height="15"/>
-                <textElement/>
-                <textFieldExpression class="java.lang.Integer"><![CDATA[$F{Count}]]></textFieldExpression>
+                <textFieldExpression class="java.lang.String"><![CDATA[$F{Street}]]></textFieldExpression>
             </textField>
             <line>
                 <reportElement positionType="Float" x="0" y="19" width="515" height="1" forecolor="#808080"/>
@@ -141,7 +141,6 @@
             </line>
         </band>
     </detail>
-
     <pageFooter>
         <band height="40">
             <line>
@@ -151,7 +150,7 @@
             <textField>
                 <reportElement x="200" y="20" width="80" height="15"/>
                 <textElement textAlignment="Right"/>
-                <textFieldExpression class="java.lang.String" >
+                <textFieldExpression class="java.lang.String">
                     <![CDATA["Page " + String.valueOf($V{PAGE_NUMBER}) + " of"]]></textFieldExpression>
             </textField>
             <textField evaluationTime="Report">
@@ -165,11 +164,19 @@
     <summary>
         <band height="80">
             <textField isStretchWithOverflow="true">
-                <reportElement x="175" y="20" width="165" height="15"/>
+                <reportElement x="175" y="20" width="165" height="15" style="Sans_Italic"/>
                 <textElement textAlignment="Center"/>
-                <textFieldExpression class="java.lang.String"><![CDATA["Books total: " +
-                    String.valueOf($V{REPORT_COUNT}) + 
-                    "."]]></textFieldExpression>
+                <textFieldExpression class="java.lang.String"><![CDATA["There were " +
+					String.valueOf($V{REPORT_COUNT}) + 
+					" address records on this report from the following cities : \n" +
+					$V{AllCities} + "."]]></textFieldExpression>
+            </textField>
+            <textField isStretchWithOverflow="true">
+                <reportElement positionType="Float" x="175" y="40" width="165" height="15" forecolor="#993300"
+                               style="Sans_Bold"/>
+                <textElement textAlignment="Center"/>
+                <textFieldExpression class="java.lang.String">
+                    <![CDATA[((ru.korgov.webeltech.reports.scriptlets.WebappScriptlet)$P{REPORT_SCRIPTLET}).hello()]]></textFieldExpression>
             </textField>
         </band>
     </summary>
